@@ -54,6 +54,7 @@ import io.camunda.zeebe.protocol.impl.record.value.processinstance.ProcessInstan
 import io.camunda.zeebe.snapshots.SnapshotId;
 import io.camunda.zeebe.snapshots.impl.FileBasedSnapshotMetadata;
 import io.camunda.zeebe.test.util.AutoCloseableRule;
+import io.camunda.zeebe.test.util.asserts.TopologyAssert;
 import io.camunda.zeebe.test.util.record.RecordingExporterTestWatcher;
 import io.camunda.zeebe.test.util.socket.SocketUtil;
 import io.camunda.zeebe.util.exception.UncheckedExecutionException;
@@ -77,7 +78,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CountDownLatch;
@@ -86,7 +86,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Consumer;
-import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import org.agrona.LangUtil;
@@ -237,9 +236,8 @@ public final class ClusteringRule extends ExternalResource {
 
     try {
       waitUntilBrokersStarted();
-      waitForPartitionReplicationFactor();
-      LOG.info("Full replication factor");
-      waitUntilBrokersInTopology();
+      waitForTopology(
+          assertion -> assertion.isComplete(clusterSize, partitionCount, replicationFactor));
       LOG.info("All brokers in topology {}", getTopologyFromClient());
 
     } catch (final Exception e) {
@@ -427,22 +425,6 @@ public final class ClusteringRule extends ExternalResource {
     return client;
   }
 
-  private void waitUntilBrokersInTopology() {
-
-    final Set<InetSocketAddress> addresses =
-        brokers.values().stream()
-            .map(Broker::getConfig)
-            .map(b -> b.getNetwork().getCommandApi().getAddress())
-            .collect(Collectors.toSet());
-
-    waitForTopology(
-        topology ->
-            topology.stream()
-                .map(b -> new InetSocketAddress(b.getHost(), b.getPort()))
-                .collect(Collectors.toSet())
-                .containsAll(addresses));
-  }
-
   public Topology getTopologyFromClient() {
     return Awaitility.await()
         .pollInterval(Duration.ofMillis(100))
@@ -475,33 +457,6 @@ public final class ClusteringRule extends ExternalResource {
         .findFirst();
   }
 
-  /** Wait for a partition bootstrap in the cluster. */
-  public void waitForPartitionReplicationFactor() {
-    waitForTopology(
-        topology ->
-            hasPartitionsWithReplicationFactor(topology, partitionCount, replicationFactor));
-  }
-
-  private boolean hasPartitionsWithReplicationFactor(
-      final List<BrokerInfo> brokers, final int partitionCount, final int replicationFactor) {
-    final AtomicLong leaders = new AtomicLong();
-    final AtomicLong followers = new AtomicLong();
-
-    brokers.stream()
-        .flatMap(b -> b.getPartitions().stream())
-        .forEach(
-            p -> {
-              if (p.isLeader()) {
-                leaders.getAndIncrement();
-              } else {
-                followers.getAndIncrement();
-              }
-            });
-
-    return leaders.get() >= partitionCount
-        && followers.get() >= partitionCount * (replicationFactor - 1);
-  }
-
   /**
    * Restarts broker, if the broker is still running it will be closed before.
    *
@@ -513,38 +468,31 @@ public final class ClusteringRule extends ExternalResource {
   }
 
   public void startBroker(final int nodeId) {
-    final Broker broker = getBroker(nodeId).start().join();
-    final InetSocketAddress commandApi =
-        broker.getConfig().getNetwork().getCommandApi().getAddress();
-    waitUntilBrokerIsAddedToTopology(commandApi);
-    waitForPartitionReplicationFactor();
+    final var broker = Objects.requireNonNull(getBroker(nodeId), "must get existing broker");
+    //noinspection resource
+    broker.start().join();
+
+    waitForTopology(
+        assertion ->
+            assertion
+                .containsBroker(nodeId)
+                .hasLeaderForEachPartition(partitionCount)
+                .hasExpectedReplicasCount(partitionCount, replicationFactor));
   }
 
   public void restartCluster() {
     final var brokers =
-        getBrokers().stream()
-            .map(b -> b.getConfig().getCluster().getNodeId())
-            .collect(Collectors.toList());
+        getBrokers().stream().map(b -> b.getConfig().getCluster().getNodeId()).toList();
     brokers.forEach(this::stopBroker);
     brokers.forEach(this::getBroker);
     try {
       waitUntilBrokersStarted();
-      waitForPartitionReplicationFactor();
-      waitUntilBrokersInTopology();
+      waitForTopology(
+          assertion -> assertion.isComplete(clusterSize, partitionCount, replicationFactor));
     } catch (final Exception e) {
       LOG.error("Failed to restart cluster", e);
       Assert.fail("Failed to restart cluster");
     }
-  }
-
-  private void waitUntilBrokerIsAddedToTopology(final InetSocketAddress socketAddress) {
-    waitForTopology(
-        topology ->
-            topology.stream()
-                .anyMatch(
-                    b ->
-                        b.getHost().equals(socketAddress.getHostName())
-                            && b.getPort() == socketAddress.getPort()));
   }
 
   /** Returns for a given broker the leading partition id's. */
@@ -637,21 +585,18 @@ public final class ClusteringRule extends ExternalResource {
   public void stopBrokerAndAwaitNewLeader(final int nodeId) {
     final Broker broker = brokers.get(nodeId);
     if (broker != null) {
-      final InetSocketAddress socketAddress =
-          broker.getConfig().getNetwork().getCommandApi().getAddress();
-      final List<Integer> brokersLeadingPartitions = getBrokersLeadingPartitions(socketAddress);
       stopBroker(nodeId);
-      waitForNewLeaderOfPartitions(brokersLeadingPartitions, socketAddress);
+      waitForTopology(
+          assertion ->
+              assertion.doesNotContainBroker(nodeId).hasLeaderForEachPartition(partitionCount));
     }
   }
 
   public void stopBroker(final int nodeId) {
     final Broker broker = brokers.remove(nodeId);
     if (broker != null) {
-      final InetSocketAddress socketAddress =
-          broker.getConfig().getNetwork().getCommandApi().getAddress();
       broker.close();
-      waitUntilBrokerIsRemovedFromTopology(socketAddress);
+      waitForTopology(assertion -> assertion.doesNotContainBroker(nodeId));
       try {
         final var systemContext = systemContexts.remove(nodeId);
         if (systemContext != null) {
@@ -686,38 +631,16 @@ public final class ClusteringRule extends ExternalResource {
     awaitOtherLeader(START_PARTITION_ID, previousLeader.getNodeId());
   }
 
-  private void waitUntilBrokerIsRemovedFromTopology(final InetSocketAddress socketAddress) {
-    waitForTopology(
-        topology ->
-            topology.stream()
-                .noneMatch(
-                    b ->
-                        b.getHost().equals(socketAddress.getHostName())
-                            && b.getPort() == socketAddress.getPort()));
-  }
-
-  private void waitForNewLeaderOfPartitions(
-      final List<Integer> partitions, final InetSocketAddress oldLeader) {
-    waitForTopology(
-        topology ->
-            topology.stream()
-                .filter(
-                    b ->
-                        !(b.getHost().equals(oldLeader.getHostName())
-                            && b.getPort() == oldLeader.getPort()))
-                .flatMap(broker -> broker.getPartitions().stream())
-                .filter(PartitionInfo::isLeader)
-                .map(PartitionInfo::getPartitionId)
-                .collect(Collectors.toSet())
-                .containsAll(partitions));
-  }
-
-  public void waitForTopology(final Predicate<List<BrokerInfo>> topologyPredicate) {
-    Awaitility.await()
+  public void waitForTopology(final Consumer<TopologyAssert> assertions) {
+    Awaitility.await("until topology satisfies a given condition")
         .pollInterval(Duration.ofMillis(100))
         .atMost(Duration.ofSeconds(60))
         .ignoreExceptions()
-        .until(() -> getTopologyFromClient().getBrokers(), topologyPredicate);
+        .untilAsserted(
+            () -> {
+              final var topology = getTopologyFromClient();
+              assertions.accept(TopologyAssert.assertThat(topology));
+            });
   }
 
   public long createProcessInstanceOnPartition(final int partitionId, final String bpmnProcessId) {
